<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="720dp"
        tools:context=".GeneralSettings">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/LB_unitSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_unitSet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/switch_unit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <Switch
            android:id="@+id/switch_unit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:height="48dp"
            android:switchMinWidth="78dp"
            android:switchPadding="20dp"
            android:text="@string/switch_unitSet"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LB_unitSet" />

        <TextView
            android:id="@+id/Lb_unitDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/lb_distanceSet"
            app:layout_constraintStart_toStartOf="@+id/switch_Unit_Distance"
            app:layout_constraintTop_toBottomOf="@+id/switch_unit" />

        <Switch
            android:id="@+id/switch_Unit_Distance"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:height="48dp"
            android:switchMinWidth="78dp"
            android:switchPadding="20dp"
            android:text="@string/switch_distanceSet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Lb_unitDistance" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/save"
            android:theme="@style/Button.Orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_Unit_Distance" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>