<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="720dp"
        tools:context=".Settings">
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/LB_valeurClic_UD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_valeurUD"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/FIELD_valeurClicUD"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/FIELD_valeurClicUD"
            android:layout_width="161dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LB_valeurClic_UD" />

        <ToggleButton
            android:id="@+id/toggleUnitUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/lb_unit"
            android:textOff="@string/unit_valeurMoa"
            android:textOn="@string/unit_valeurMil"
            app:layout_constraintBottom_toBottomOf="@+id/FIELD_valeurClicUD"
            app:layout_constraintStart_toEndOf="@+id/FIELD_valeurClicUD"
            app:layout_constraintTop_toBottomOf="@+id/LB_valeurClic_UD" />

        <TextView
            android:id="@+id/LB_valeurClicRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/lb_valeurRL"
            app:layout_constraintStart_toStartOf="@+id/FIELD_valeurClicLR"
            app:layout_constraintTop_toBottomOf="@+id/FIELD_valeurClicUD" />

        <EditText
            android:id="@+id/FIELD_valeurClicLR"
            android:layout_width="161dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LB_valeurClicRL" />

        <ToggleButton
            android:id="@+id/toggleUnitRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/lb_unit"
            android:textOff="@string/unit_valeurMoa"
            android:textOn="@string/unit_valeurMil"
            app:layout_constraintBottom_toBottomOf="@+id/FIELD_valeurClicLR"
            app:layout_constraintStart_toEndOf="@+id/FIELD_valeurClicLR"
            app:layout_constraintTop_toBottomOf="@+id/LB_valeurClicRL" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/save"
            android:theme="@style/Button.Orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FIELD_valeurClicLR" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>